--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<script type="text/javascript" src="/static/components/TranscendLib/TranscendLib.umd.js">
+		</script>
 		<script type="text/javascript" src="http://api.tianditu.gov.cn/api?v=4.0&tk=81bf1620a6d719f1ed9bfd37c45fa64b">
 		</script>
 		<script>
