--- a/static/vue/map/tianditu.html
+++ b/static/vue/map/tianditu.html
@@ -5,50 +5,39 @@
 	<!-- 引入vant样式 -->
 	<link rel="stylesheet" href="../../lib/vant/2-12/index.css" />
 	<!-- test -->
-	<link ref="stylesheet" href="../../components/uni-fab/UniFab.css"
+	<link rel="stylesheet" href="../../components/TranscendLib/TranscendLib.css" />
+	
 	<style>
 		#mapDiv {
 			width: 100%;
 			height: calc(100vh - 15px);
 			position: absolute;
 		}
-
-		#fabDiv {
-			float: right;
-			position: absolute;
-			top: 0;
-			right: 0;
-			z-index: 999999;
-			background-color: red;
-		}
 	</style>
 </head>
 <body>
 	<div id="app" style="position: relative;">
 		<div id="mapDiv"></div>
-		<div id="fabDiv">
-			<van-button @click="buttonClick()">按钮</van-button>
-		</div>
-		<uni-fab></uni-fab>
+		<transcendfab></transcendfab>
 	</div>
 </body>
 <!--引入VUE.JS-->
+<!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.2"></script> -->
 <script src="../../lib/vue/2-6-14/vue.min.js"></script>
 <!--引入天地图JS-->
 <script src="../../lib/tmap/api.js"></script>
 <!--引入vant-->
 <script src="../../lib/vant/2-12/vant.min.js"></script>
 <!-- test -->
-<script src="../../components/uni-fab/UniFab.common.js"></script>
-<script src="../../components/uni-fab/UniFab.umd.js"></script>
-
-
-
+<script src="../../components/my-component/my-component.js"></script>
+<!-- 使用TranscendComponent打包时，只能用于html -->
+<script src="../../components/TranscendLib/TranscendLib.umd.js"></script>
 <script>
-	var app = new Vue({
+	new Vue({
 		el: '#app',
 		data: function() {
-			return {};
+			return {
+			};
 		},
 		mounted: function() {
 			that = this;
@@ -65,6 +54,5 @@
 		}
 	});
 	Vue.use(vant.Lazyload);
-	Vue.use(uniFab);
 </script>
 </html>
